# RT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RTv1
includes/: camera.h  error_codes.h  lights.h  material.h  objects.h  parser.h  plane.h  rgba.h  rtv1.h  sphere.h  vectors.h
kernel_includes/: kernel.hl
kernels/: raytrace.cl  raytrace1.cl  raytrace_1.cl  raytrace_backup.cl  tt.cl
scenes/: 1_cylinder_1_spot.txt  1_sphere_1_plane_1_spot.txt  1_sphere_4_cylinders_1_spot.txt  2_cones_1_spot.txt  5_spheres_2_planes_1_spots.txt  5_spheres_2_planes_3_spots.txt  pyramid_test.txt  test.txt  test1.txt  triangle_test.txt
sources/: camera.c  cl_init.c  coloring.c  error.c  init.c  lights.c  main.c  material.c  objects.c  plane.c  render.c  rgba.c  sphere.c  triangle_orientation.c  vectors.c  vectors_2.c
sources/controllers/: controller.c  keyboard_controller.c  mouse_controller.c
sources/parser/: ft_atof.c  ft_strsplit_space.c  parse.c  parse_2.c  parse_light.c  parse_light_2.c  parse_obj.c  parse_obj_2.c  parse_object3d.c  parse_object3d_utilities.c  parse_other.c  parse_utilities.c  parse_utilities_2.c  read_arg.c
